# Prime-del

./: .gitignore  README.md  _config.yml  docs.html  gen_pegs.py  index.html  primedel-1.0-py2.py3-none-any.whl  setup.cfg  setup.py
Primedel_app/: app.yaml  main.py  primedel-1.1-py2.py3-none-any.whl  requirements.txt
Primedel_app/primedel/: __init__.py  indel_ratio.npz
Primedel_app/templates/: footer.html  head.html  header.html  index.html
_includes/: header.html
examples/: eNMU-CRISPOR.xls  eNMU-MIT.txt  eNMU-flashfry.output.scored  eNMU.fasta
primedel/: design.py
