[metadata]
name = primedel
author = Wei Chen
author_email = wchen108@uw.edu
version = 1.0
description = A package for primedel
long_description = file: README.rd
long_description_content_type = text/markdown
keywords = prime_editing, pegRNA_design
license = MIT
home_page = https://github.com/shendurelab/Prime-del/main/
project_urls =
    Issue Tracker = https://github.com/wimglenn/resources-example/issues
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 2
    Programming Language :: Python :: 3

[options]
packages = primedel
include_package_data = true
install_requires =
    numpy
    pandas

[bdist_wheel]
universal = 1